# Aether

./: .gitignore  5_Build (Release, win-x64).txt  CMakeLists.txt  DEPLOYMENT.md  README.md  SECURITY_OPTIMIZATION_REPORT.md  SYNCHRONIZED_ARCHITECTURE.md  error.txt  package-lock.json  package.json  temp_fix.h  vcpkg.json
.amazonq/cli-todo-lists/: 1757162332655.json  1757165658339.json  1757168578240.json
.github/codeql/: advanced-security-config.yml  codeql-config.yml  custom-security-queries.ql
.github/workflows/: backend-build.yml  build.yml  enhanced-security-build.yml  frontend-build.yml  windows-ci.yml
Aether-Backend-build-artifacts/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Aether.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  backend_build_summary.txt  tree.txt
Aether-Backend-build-artifacts/src/backend/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  aether_backend.sln  aether_backend.vcxproj  aether_backend.vcxproj.filters
Aether-Backend-build-artifacts/src/gui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  aether_gui.sln  aether_gui.vcxproj  aether_gui.vcxproj.filters
Aether-Backend-build-artifacts/src/gui/Release/: AetherGUI.exp  AetherGUI.lib
Aether-Backend-build-artifacts/src/setup/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  aether_setup.sln  aether_setup.vcxproj  aether_setup.vcxproj.filters
Aether-Backend-build-artifacts/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
PhantomAC/: pom.xml
docs/: API.md  Advanced_Testing_Strategy.md  Cleanup_Algorithm.md  IPC_Protocol.md  SETUP.md  Security_And_Testing.md  UI_UX_Recommendations.md
final_release/: README.txt
plugins/SamplePlugin/: SamplePlugin.cs  SamplePlugin.csproj  plugin.json
release/: COMPLETE_PACKAGE.md  README.txt  RELEASE_INFO.txt
scripts/: build.ps1  check_dependencies.bat  create_release.py
scripts/installer/: aether.iss  license.txt
src/backend/: AIController.cpp  AIController.h  Aether.h  CMakeLists.txt  Core.cpp  Core.h  EphemeralMemory.cpp  EphemeralMemory.h  EventManager.cpp  EventManager.h  Hooks.cpp  Hooks.h  IPC.cpp  IPC.h  InjectionEngine.cpp  InjectionEngine.h  MemoryPatcher.cpp  MemoryPatcher.h  NetworkManager.cpp  NetworkManager.h  PolymorphicEngine.cpp  PolymorphicEngine.h  Security.h  SecurityManager.cpp  SecurityManager.h  exports.cpp  main.cpp
src/backend/ai/: AIController.h  BehaviorRandomizer.cpp  BehaviorRandomizer.h  SecurityAIOrchestrator.cpp  SecurityAIOrchestrator.h  UnifiedAISynchronizer.cpp  UnifiedAISynchronizer.h
src/backend/antidetect/: AntiDetection.cpp  AntiDetection.h
src/backend/injection/: ManualMapper.cpp  ManualMapper.h  ThreadHijacker.cpp  ThreadHijacker.h
src/backend/ipc/: EncryptedSharedMemoryIPC.cpp  EncryptedSharedMemoryIPC.h  NamedPipeServer.cpp  NamedPipeServer.h  Steganography.cpp  Steganography.h
src/backend/loader/: SelfDeletingLoader.cpp  SelfDeletingLoader.h
src/backend/memory/: MemoryProtection.cpp  MemoryProtection.h
src/backend/ml/: BehavioralCloner.cpp  BehavioralCloner.h  MLPrimitives.cpp  MLPrimitives.h  NeuralObfuscator.cpp  NeuralObfuscator.h  PatternDetector.cpp  PatternDetector.h
src/backend/mutation/: RuntimeBinaryMutator.cpp  RuntimeBinaryMutator.h
src/backend/performance/: PerformanceMonitor.h
src/backend/security/: AdvancedAntiDetection.cpp  AdvancedAntiDetection.h  DebugEvader.cpp  DebugEvader.h  DecoyLayerSystem.cpp  DecoyLayerSystem.h  EncryptionManager.cpp  EncryptionManager.h  HardwareFingerprintSpoofer.cpp  HardwareFingerprintSpoofer.h  HyperionHookMonitor.cpp  HyperionHookMonitor.h  MemoryCloakingEngine.cpp  MemoryCloakingEngine.h  SandboxDetector.cpp  SandboxDetector.h  SecurityAudit.cpp  SecurityAudit.h  SecurityHardening.cpp  SecurityHardening.h  SecurityTypes.h  SignatureScanner.cpp  SignatureScanner.h  Timing.h  XorStr.h
src/backend/stealth/: StealthTechniques.cpp  StealthTechniques.h
src/backend/syscall/: SyscallEvasion.cpp  SyscallEvasion.h
src/backend/virtualization/: PolymorphicVirtualMachine.cpp  PolymorphicVirtualMachine.h
src/backend/vm/: BytecodeOptimizer.cpp  BytecodeOptimizer.h  Compiler.cpp  Compiler.h  JITCompiler.cpp  JITCompiler.h  VMOpcodes.h  VirtualMachine.cpp  VirtualMachine.h
src/frontend/: Aether.Frontend.csproj  App.xaml  App.xaml.cs
src/frontend.tests/: Aether.Frontend.Tests.csproj
src/frontend.tests/Controls/: ScriptEditorTests.cs
src/frontend.tests/ViewModels/: MainViewModelTests.cs
src/frontend/Controls/: AdvancedScriptEditor.cs  AdvancedScriptEditor.xaml  ScriptEditor.cs  ScriptEditor.xaml
src/frontend/Models/: ApiDocumentationModels.cs  AppState.cs  FileNode.cs  IntelliSenseItem.cs  OpenDocument.cs  PerformanceModels.cs  PluginInfo.cs  ScriptConverterModels.cs  TutorialModels.cs
src/frontend/Services/: AnalyticsService.cs  ApiDocumentationService.cs  CodeFoldingManager.cs  ErrorAnalyzer.cs  ErrorHandlingService.cs  IpcClientService.cs  LuauIntelliSense.cs  LuauSyntaxHighlighter.cs  MarketplaceService.cs  PerformanceMonitor.cs  PluginManager.cs  ScriptConverterService.cs  SetupService.cs  TutorialService.cs
src/frontend/ViewModels/: AppSettingsViewModel.cs  MainViewModel.cs  SettingsViewModel.cs  SetupViewModel.cs
src/frontend/Views/: MainWindow.cs  MainWindow.xaml  MarketplaceWindow.xaml  MarketplaceWindow.xaml.cs  MiniWindow.cs  MiniWindow.xaml  PerformanceWindow.xaml  PerformanceWindow.xaml.cs  PluginManagerWindow.xaml  PluginManagerWindow.xaml.cs  SettingsWindow.cs  SettingsWindow.xaml  SetupWindow.xaml  TutorialWindow.xaml  TutorialWindow.xaml.cs
src/gui/: AetherGUI.cpp  CMakeLists.txt  MainWindow.xaml  VSCodeGUI.cpp
src/kernel/: Driver.cpp
src/kernel/bypasses/: Cryptography.cpp  Cryptography.h  Driver.cpp  Driver.h  Hardware.cpp  Hardware.h  Injection.cpp  Injection.h  Memory.cpp  Memory.h  Monitoring.cpp  Monitoring.h  Network.cpp  Network.h  Process.cpp  Process.h
src/payload/: dllmain.cpp
src/setup/: CMakeLists.txt  SetupWindow.cs  SetupWindow.xaml  SetupWizard.cpp
src/tools/: CMakeLists.txt  DependencyChecker.cpp
tests/: CMakeLists.txt
tests/backend/: test_core.cpp  test_ipc.cpp
(+50 files in other folders)
